Updated library reference to include lib-wl-stats. User guide still not updated!

--- a/manual/wlburst-reference-over.tex
+++ b/manual/wlburst-reference-over.tex
@@ -16,6 +16,11 @@ detection and other operations on Field Trip raw data structures. Events
 detected are returned as ``event matrices''. Functions that further process
 these event matrices are also provided in this category.
 %
+\item \textbf{``Statistics''} functions (ch. \ref{sect-stats}) compile
+burst rate statistics from ``event matrices'', perform bootstrapped
+estimation of confidence intervals on burst rates, and create phase-shuffled
+surrogate data to estimate background detection rates.
+%
 \item \textbf{``Synthesis''} functions (ch. \ref{sect-synth}) construct
 simulated LFP oscillation events based on supplied parameters. These
 functions are also used when reconstructing nominal detected oscillation
