--- a/manual/wlburst-reference.tex
+++ b/manual/wlburst-reference.tex
@@ -71,6 +71,7 @@
 \input{wlburst-reference-formats}
 \input{wlburst-reference-proc}
 \input{wlburst-reference-ft}
+\input{wlburst-reference-stats}
 \input{wlburst-reference-synth}
 \input{wlburst-reference-aux}
 \input{wlburst-reference-plot}
